# deeplx

./: .eslintrc.cjs  README.md  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: sharp.cjs
src/: App.css  App.tsx  Header.tsx  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: api.rs  lang.rs  main.rs
