[package]
name = "deeplx"
version = "0.1.0"
description = "在线翻译"
authors = ["lby"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "window-hide",
    "window-start-dragging",
    "window-show",
    "window-close",
    "window-minimize",
    "shell-open",
    "process-command-api",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.0", features = ["json"] }
anyhow = "1.0.83"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
ctrlc = "3.4.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = 's'   # Optimize for binary size
strip = true      # Remove debug symbols
